--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -8,6 +8,10 @@ Dependencies:
     'frameworks/karchive' : '@same'
     'frameworks/kcolorscheme' : '@same'
 
+- 'on': [ 'Linux', 'FreeBSD', 'Windows' ]
+  'require':
+    'frameworks/breeze-icons': '@same'
+
 Options:
   test-before-installing: True
   require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows/Qt5', 'Android' ]
