--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ ecm_setup_version(PROJECT
 set(REQUIRED_QT_VERSION 6.5.0)
 find_package(Qt6Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 find_package(Qt6Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
-if (NOT ANDROID)
+if (UNIX AND NOT APPLE AND NOT ANDROID)
   find_package(Qt6DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 endif()
 if (KICONTHEMES_USE_QTQUICK)
